[gd_scene load_steps=9 format=3 uid="uid://cmyhje0055jiq"]

[ext_resource type="Theme" uid="uid://cgpmko4d01n84" path="res://game/ui-theme/theme.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://8064wgu24krk" path="res://scene/Factory.tscn" id="2_8t5sl"]
[ext_resource type="PackedScene" uid="uid://dmfdkwcu73843" path="res://game/menu/MainMenu.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://c36i4ds1o7ejo" path="res://scene/Factory_MenuBackground.tscn" id="3_2dw32"]
[ext_resource type="PackedScene" uid="uid://bjbey6bjjepho" path="res://game/loading/TransitionScreen.tscn" id="4"]
[ext_resource type="Script" path="res://game/Game.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://bmtrg631t53ce" path="res://game/LevelCompleteOverlay.tscn" id="5_qsxln"]
[ext_resource type="PackedScene" uid="uid://cpsuij1n1t35a" path="res://game/LevelFailedOverlay.tscn" id="6_j65kt"]

[node name="Game" type="Node"]
process_mode = 3
script = ExtResource("5")
room_scn = ExtResource("2_8t5sl")

[node name="MenuBackground" type="Node3D" parent="."]
process_mode = 1

[node name="Factory_MenuBackground" parent="MenuBackground" instance=ExtResource("3_2dw32")]

[node name="RoomContainer" type="Node3D" parent="."]
process_mode = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1")

[node name="LevelCompleteOverlay" parent="UI" instance=ExtResource("5_qsxln")]
visible = false
layout_mode = 1

[node name="LevelFailedOverlay" parent="UI" instance=ExtResource("6_j65kt")]
visible = false
layout_mode = 1

[node name="MainMenu" parent="UI" instance=ExtResource("3")]
layout_mode = 1

[node name="TransitionScreen" parent="UI" instance=ExtResource("4")]
visible = false
layout_mode = 1

[node name="FmodBankLoader" type="FmodBankLoader" parent="."]
bank_paths = ["res://sound/Desktop/Master.strings.bank", "res://sound/Desktop/Master.bank"]

[node name="Music_Transition" type="FmodEventEmitter2D" parent="."]
event_name = "event:/MUSIC/MUSIC_TRANSITION"
event_guid = "{8548d105-2a3a-4ce5-85a5-6a69057132bd}"

[node name="Music" type="FmodEventEmitter3D" parent="."]
event_name = "event:/MUSIC/MUSICTEMP"
event_guid = "{97dbfa54-0e88-4f6d-b10d-06d329fd9b69}"
autoplay = true
event_parameter/LEVELCOMPLETE/id = 8541990160951283049
event_parameter/LEVELCOMPLETE/value = 0.0
event_parameter/LEVELCOMPLETE/min_value = 0.0
event_parameter/LEVELCOMPLETE/max_value = 1.0
event_parameter/LEVELCOMPLETE/default_value = 0.0
event_parameter/CHASE/id = 3904272917760853846
event_parameter/CHASE/value = 0.0
event_parameter/CHASE/min_value = 0.0
event_parameter/CHASE/max_value = 3.0
event_parameter/CHASE/default_value = 0.0
